# funko

./: .gitignore  MIT_License.md  README.md  main.py  pyproject.toml
data/: html_req.txt
utils/: util.py
